# sqlcrypto

./: .gitignore  Cargo.toml  README.md  sqlcrypto.db  sqlcrypto_dec.db
.github/workflows/: rust.yml
src/: decrypt.rs  encrypt.rs  error.rs  lib.rs  main.rs
