[package]
name = "sqlcrypto"
description = "lightweight and memory efficient sqlite/sqlcipher encryption (not secure)/decryption in pure rust"
documentation = "https://docs.rs/sqlcrypto"
license = "MIT"
version = "0.1.2"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"
repository = "https://github.com/PizzaCrust/sqlcrypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sqlcrypto"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sqlcrypto-cli"
path = "src/main.rs"

[dependencies]
aesni = "0.9.0"
block-modes = "0.6.1"
pbkdf2 = { version = "0.5.0", default-features = false, features = ["parallel"] }
hmac = "0.9.0"
sha-1 = "0.9.1"