[package]
name = "sqlcrypto"
description = "sqlite encryption/decryption"
documentation = "https://docs.rs/sqlcrypto"
license = "MIT"
version = "1.0.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"
repository = "https://github.com/PizzaCrust/sqlcrypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sqlcrypto"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sqlcrypto-cli"
path = "src/main.rs"

[dependencies]
block-modes = "0.7.0"
aes = "0.6.0"
pbkdf2 = { version = "0.6.0", default-features = false }
sha-1 = "0.9.2"
hmac = "0.10.1"
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
parallel = ["rayon", "pbkdf2/parallel"]